Fixed about page overflow
The text would get cut off if you expanded the page. That should no longer be the case.

--- a/beedzo.css
+++ b/beedzo.css
@@ -140,15 +140,16 @@ html, body {
   object-fit: cover;
 }
 
-#WelcomeContent {
+.WelcomeContent {
   position: relative;
   z-index: 1;
   background: rgba(0, 0, 0, 0.5);
-  min-height: 100%;
-  min-width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
-#WelcomeText {
+.WelcomeText {
+  max-height: 80%;
   font-size: 20px;
   position: absolute;
   top: 50%;
@@ -157,6 +158,10 @@ html, body {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+  overflow-y: auto;
+  justify-content: center;
+  align-content: center;
+  margin: auto;
 }
 
 #AboutPage {
